# fathom

./: .env.example  .gitignore  OPTION-1.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  start.bat  start.sh
app/: config.py  db.py  llm_client.py  main.py  scraper.py
app/agent/: loop.py  prompts.py  tools.py
app/routers/: jobs.py  research.py
extension/: background.js  manifest.json
static/: index.html
